--- a/astal/templates/home.html
+++ b/astal/templates/home.html
@@ -7,10 +7,11 @@
         <input class="form-control" name="reservation_date" id="reservation_date" type="date" min="{{ min_date }}" max="{{ max_date }}" value="{{ reservation_date }}">
         <label for="number_of_people">Broj osoba</label>
         <input class="form-control" name="number_of_people" id="number_of_people" type="number" min="1" value="{{ number_of_people }}">
+        {% if interval_options %}
         <label for="reservation_time">Izaberite vreme rezervacije</label>
         <select class="form-select" name="reservation_time" id="reservation_time">
             {% for interval in interval_options %}
-                <option value="{{ interval[0] }}">{{ interval[0] }} - {{ interval[1] }} </option>
+                <option value="{{ interval[0] }}">{{ interval[0] }}{{ interval[1] }} </option>
             {% endfor %}
         </select>
 
@@ -26,9 +27,15 @@
         <label for="user_phone">Broj telefona</label>
         <input class="form-control" name="user_phone" id="user_phone" type="text" value="{{ user_phone }}">
 
+        <label for="user_note">Napomena</label>
+        <input class="form-control mb-4" name="user_note" id="user_note" type="text">
+
         <input type="hidden" id="submit_type" name="submit_type" value="">
+        <button class="btn btn-primary" type="submit" id="reservation_button" name="reservation_button" onclick="document.getElementById('submit_type').value='button'">Rezerviši</button>
+        {% else %}
+        Nije moguće rezervisati, za više informacija konaktirajte nas na broj...
+        {% endif %}
     </div>
-    <button class="btn btn-primary" type="submit" id="reservation_button" name="reservation_button" onclick="document.getElementById('submit_type').value='button'">Rezerviši</button>
 </form>
 {% endblock content %}
 {% block scripts %}
