--- a/astal/templates/layout.html
+++ b/astal/templates/layout.html
@@ -32,7 +32,16 @@
             <div class="container-fluid">
                 <ul class="navbar-nav" style="margin-left: auto;">
                     <li class="nav-item">
-                        <a class="navbar-brand" href="">Astal</a>
+                        <a class="navbar-brand" href="{{ url_for('main.settings') }}">Podešavanja</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="{{ url_for('admin.reservations') }}">Rezervacije</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="{{ url_for('admin.calendar') }}">Kalendar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar-brand" href="{{ url_for('main.home') }}">Astal</a>
                     </li>
                 </ul>
             </div>
