--- a/astal/templates/settings.html
+++ b/astal/templates/settings.html
@@ -7,8 +7,12 @@
         <input class="form-control" name="reservation_coast_per_person" id="reservation_coast_per_person" type="number" step="0.01" value="{{ settings.reservation_coast_per_person }}">
     </div>
     <div class="form-group mb-4">
-        <label for="default_number_of_tables">Podrazumevani Broj stolova</label>
-        <input class="form-control" name="default_number_of_tables" id="default_number_of_tables" type="number" value="{{ settings.default_number_of_tables }}">
+        <label for="default_number_of_tables_2">Podrazumevani Broj stolova (2 mesta)</label>
+        <input class="form-control" name="default_number_of_tables_2" id="default_number_of_tables_2" type="number" value="{{ settings.default_number_of_tables_2 }}">
+    </div>
+    <div class="form-group mb-4">
+        <label for="default_number_of_tables_4">Podrazumevani Broj stolova (4 mesta)</label>
+        <input class="form-control" name="default_number_of_tables_4" id="default_number_of_tables_4" type="number" value="{{ settings.default_number_of_tables_4 }}">
     </div>
     <div class="form-group mb-4">
         <label for="reservation_start_time">Vreme početka rezervacije</label>
