--- a/astal/templates/calendar.html
+++ b/astal/templates/calendar.html
@@ -28,10 +28,10 @@
         {% for row in table %}
         <tr>
             <td>{{ row['interval'] }}</td>
-            <td><input type="number" class="available-tables" data-interval="{{ row['interval'] }}" value="{{ row['available_tables_2'] }}"></td>
+            <td><input type="number" class="available-tables" data-interval="{{ row['interval'] }}" name="available_tables_2" value="{{ row['available_tables_2'] }}"></td>
             <td>{{ row['booked_tables_2'] }}</td>
             <td>{{ row['free_tables_2'] }}</td>
-            <td><input type="number" class="available-tables" data-interval="{{ row['interval'] }}" value="{{ row['available_tables_4'] }}"></td>
+            <td><input type="number" class="available-tables" data-interval="{{ row['interval'] }}" name="available_tables_4" value="{{ row['available_tables_4'] }}"></td>
             <td>{{ row['booked_tables_4'] }}</td>
             <td>{{ row['free_tables_4'] }}</td>
         </tr>
@@ -59,8 +59,15 @@
             .catch(error => console.error('Error:', error));
         } else if (e.target.classList.contains('available-tables')) {
             var interval = e.target.dataset.interval;
-            var availableTables_2 = e.target.value;
-            var availableTables_4 = e.target.value;
+            var availableTables_2, availableTables_4;
+
+            if (e.target.name === 'available_tables_2') {
+                availableTables_2 = e.target.value;
+                availableTables_4 = document.querySelector(`input[data-interval="${interval}"][name="available_tables_4"]`).value;
+            } else if (e.target.name === 'available_tables_4') {
+                availableTables_4 = e.target.value;
+                availableTables_2 = document.querySelector(`input[data-interval="${interval}"][name="available_tables_2"]`).value;
+            }
             var reservationDate = document.getElementById('reservation_date').value;
             
             var formData = new FormData();
