--- a/astal/templates/home.html
+++ b/astal/templates/home.html
@@ -1,40 +1,57 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1>Rezervacija</h1>
+<h1 class="astal-heading">Rezervacija</h1>
 <form action="" method="POST">
     <div class="form-group mb-4">
-        <label for="reservation_date">Izaberite datum rezervacije</label>
-        <input class="form-control" name="reservation_date" id="reservation_date" type="date" min="{{ min_date }}" max="{{ max_date }}" value="{{ reservation_date }}">
-        <label for="number_of_people">Broj osoba</label>
-        <input class="form-control" name="number_of_people" id="number_of_people" type="number" min="1" value="{{ number_of_people }}">
-        {% if interval_options %}
-        <label for="reservation_time">Izaberite vreme rezervacije</label>
-        <select class="form-select" name="reservation_time" id="reservation_time">
-            {% for interval in interval_options %}
-                <option value="{{ interval[0] }}">{{ interval[0] }}{{ interval[1] }} </option>
-            {% endfor %}
-        </select>
+        <div class="container astal-form">
+            <div class="row">
+                <div class="col-md-4">
+                    <label for="reservation_date" class="cormorant">Izaberite datum rezervacije</label>
+                    <input class="form-control" name="reservation_date" id="reservation_date" type="date" min="{{ min_date }}" max="{{ max_date }}" value="{{ reservation_date }}">
+                </div>
+                <div class="col-md-4">
+                    <label for="number_of_people" class="cormorant">Broj osoba</label>
+                    <input class="form-control" name="number_of_people" id="number_of_people" type="number" min="1" value="{{ number_of_people }}">
+                </div>
+                <div class="col-md-4">
+                    {% if interval_options %}
+                    <label for="reservation_time" class="cormorant">Izaberite vreme rezervacije</label>
+                    <select class="form-select" name="reservation_time" id="reservation_time">
+                        {% for interval in interval_options %}
+                            <option value="{{ interval[0] }}">{{ interval[0] }}{{ interval[1] }} </option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <label for="user_email" id="user_email" class="cormorant">Mejl</label>
+                    <input class="form-control" name="user_email" id="user_email" type="email" value="{{ user_email }}">
+                </div> 
+                <div class="col-md-3">
+                    <label for="user_name" class="cormorant">Ime</label>
+                    <input class="form-control" name="user_name" id="user_name" type="text" value="{{ user_name }}">
+                </div>
+                <div class="col-md-3">
+                    <label for="user_surname" class="cormorant">Prezime</label>
+                    <input class="form-control" name="user_surname" id="user_surname" type="text" value="{{ user_surname }}">
+                </div>
+                <div class="col-md-3">
+                    <label for="user_phone" class="cormorant">Broj telefona</label>
+                    <input class="form-control" name="user_phone" id="user_phone" type="text" value="{{ user_phone }}">
+                </div>
+            </div>
+            <div class="row">
+                <label for="user_note" class="cormorant">Napomena</label>
+                <input class="form-control mb-4" name="user_note" id="user_note" type="text">
 
-        <label for="user_email" id="user_email">Mejl</label>
-        <input class="form-control" name="user_email" id="user_email" type="email" value="{{ user_email }}">
-
-        <label for="user_name">Ime</label>
-        <input class="form-control" name="user_name" id="user_name" type="text" value="{{ user_name }}">
-
-        <label for="user_surname">Prezime</label>
-        <input class="form-control" name="user_surname" id="user_surname" type="text" value="{{ user_surname }}">
-
-        <label for="user_phone">Broj telefona</label>
-        <input class="form-control" name="user_phone" id="user_phone" type="text" value="{{ user_phone }}">
-
-        <label for="user_note">Napomena</label>
-        <input class="form-control mb-4" name="user_note" id="user_note" type="text">
-
-        <input type="hidden" id="submit_type" name="submit_type" value="">
-        <button class="btn btn-primary" type="submit" id="reservation_button" name="reservation_button" onclick="document.getElementById('submit_type').value='button'">Rezerviši</button>
-        {% else %}
-        Nije moguće rezervisati, za više informacija konaktirajte nas na broj...
-        {% endif %}
+                <input type="hidden" id="submit_type" name="submit_type" value="">
+                <button class="btn btn-primary" type="submit" id="reservation_button" name="reservation_button" onclick="document.getElementById('submit_type').value='button'">Rezerviši</button>
+                {% else %}
+                Nije moguće rezervisati, za više informacija konaktirajte nas na broj...
+                {% endif %}
+            </div>
+        </div>
     </div>
 </form>
 {% endblock content %}
