--- a/astal/templates/home.html
+++ b/astal/templates/home.html
@@ -4,16 +4,17 @@
 <form action="" method="POST">
     <div class="form-group mb-4">
         <div class="container astal-form">
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row grupisano">
+                <div class="col-md-2"></div>
+                <div class="col-md-3">
                     <label for="reservation_date" class="cormorant">Izaberite datum rezervacije</label>
                     <input class="form-control" name="reservation_date" id="reservation_date" type="date" min="{{ min_date }}" max="{{ max_date }}" value="{{ reservation_date }}">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-2">
                     <label for="number_of_people" class="cormorant">Broj osoba</label>
                     <input class="form-control" name="number_of_people" id="number_of_people" type="number" min="1" value="{{ number_of_people }}">
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     {% if interval_options %}
                     <label for="reservation_time" class="cormorant">Izaberite vreme rezervacije</label>
                     <select class="form-select" name="reservation_time" id="reservation_time">
@@ -22,6 +23,7 @@
                         {% endfor %}
                     </select>
                 </div>
+                <div class="col-md-2"></div>
             </div>
             <div class="row">
                 <div class="col-md-3">
@@ -42,14 +44,21 @@
                 </div>
             </div>
             <div class="row">
-                <label for="user_note" class="cormorant">Napomena</label>
-                <input class="form-control mb-4" name="user_note" id="user_note" type="text">
-
-                <input type="hidden" id="submit_type" name="submit_type" value="">
-                <button class="btn btn-primary" type="submit" id="reservation_button" name="reservation_button" onclick="document.getElementById('submit_type').value='button'">Rezerviši</button>
-                {% else %}
-                Nije moguće rezervisati, za više informacija konaktirajte nas na broj...
-                {% endif %}
+                <div class="col-md-2"></div>
+                <div class="col-md-8">
+                    <label for="user_note" class="cormorant">Napomena</label>
+                    <textarea class="form-control mb-4" name="user_note" id="user_note" type="text"></textarea>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center mt-4">
+                    <input type="hidden" id="submit_type" name="submit_type" value="">
+                    <button class="animated-btn text-white" type="submit" id="reservation_button" name="reservation_button" onclick="document.getElementById('submit_type').value='button'">Rezerviši</button>
+                    {% else %}
+                    Nije moguće rezervisati, za više informacija konaktirajte nas na broj...
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
