--- a/astal/static/css/astal.css
+++ b/astal/static/css/astal.css
@@ -2,6 +2,8 @@
 body::before { content: " GUŠTAJTE..."; position: absolute; top: 35%; left: 5%; font-size: 16vw; color: rgba(255, 255, 255, 0.3); z-index: -1; white-space: nowrap; }
 #ball { position: absolute; width: 12px; height: 12px; background-color: #c8d400; border-radius: 50%; pointer-events: none; transition: width 0.3s, height 0.3s; }
 .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl { max-width: 1500px; }
+header.container.logedin { display: flex; justify-content: space-between; min-height: 120px; }
+header.container.logedin .logo { display: flex; }
 .logo { max-width: 180px; }
 .cormorant { font-family: 'Cormorant Garamond', serif; }
 label.cormorant { font-size: 24px; font-style: italic; color: #999; }
@@ -14,6 +16,12 @@ h1.astal-heading { text-align: center; font-size: clamp(2rem, 5vw, 8rem); margin
 .animated-btn { width: 120px; height: 120px; border-radius: 50%; line-height: 120px; display: inline-block; text-align: center; font-size: 20px; background-color: transparent; position: relative; background-repeat: no-repeat; background-position: 50% 50%; border: 0; }
 .animated-btn::before, .animated-btn::after { content: ''; display: block; position: absolute; top: 0; right: 0; bottom: 0; left: 0; border-radius: 50%; background: rgba(200, 212, 0, 0.8); animation: ripple-1 2s infinite ease-in-out; z-index: -1;}
 .animated-btn::after { background: rgba(200, 212, 0, 0.8); animation: ripple-2 2s infinite ease-in-out; animation-delay: 0.5s; }
+
+.pre-alert { margin-top: 50px; }
+.alert { border-radius: 0; font-family: 'Cormorant Garamond', serif; font-size: 32px; font-style: italic; width: fit-content; }
+.alert-success { color: #ffffff; background-color: #c8d400; border-color: #c8d400; }
+.alert-danger { color: #ffffff; background-color: #ff6876; border-color: #ff6876; }
+
 @media (max-width: 768px) {
     #ball { display: none; }
 }
