--- a/astal/templates/home.html
+++ b/astal/templates/home.html
@@ -4,7 +4,7 @@
 <form action="" method="POST">
     <div class="form-group mb-4">
         <div class="container astal-form">
-            <div class="row grupisano">
+            <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-3">
                     <label for="reservation_date" class="cormorant">Izaberite datum rezervacije</label>
