--- a/astal/templates/login.html
+++ b/astal/templates/login.html
@@ -1,29 +1,37 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1>Prijavljivanje</h1>
+<h1 class="astal-heading">Prijavljivanje</h1>
 <form method="POST" action="{{ url_for('admin.admin_login') }}">
     {{ form.hidden_tag() }}
-    <div class="mb-3">
-        {{ form.email.label(class="form-label") }}
-        {{ form.email(class="form-control") }}
-        {% for error in form.email.errors %}
-            <span class="text-danger">{{ error }}</span>
-        {% endfor %}
+    <div class="container astal-form">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-3">
+                {{ form.email.label(class="form-label cormorant") }}
+                {{ form.email(class="form-control") }}
+                {% for error in form.email.errors %}
+                    <span class="text-danger">{{ error }}</span>
+                {% endfor %}
+            </div>
+            <div class="col-md-3">
+                {{ form.password.label(class="form-label cormorant") }}
+                {{ form.password(class="form-control") }}
+                {% for error in form.password.errors %}
+                    <span class="text-danger">{{ error }}</span>
+                {% endfor %}
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 text-end mt-4">
+                {{ form.remember(class="form-check-input") }}
+                {{ form.remember.label(class="form-check-label") }}
+            </div>
+            <div class="col-md-4 text-center mt-4">
+                <button type="submit" class="animated-btn text-white">{{ form.submit.label }}</button>
+            </div>
+            <div class="col-md-4 text-center mt-4"></div>
+        </div>
     </div>
-
-    <div class="mb-3">
-        {{ form.password.label(class="form-label") }}
-        {{ form.password(class="form-control") }}
-        {% for error in form.password.errors %}
-            <span class="text-danger">{{ error }}</span>
-        {% endfor %}
-    </div>
-
-    <div class="mb-3 form-check">
-        {{ form.remember(class="form-check-input") }}
-        {{ form.remember.label(class="form-check-label") }}
-    </div>
-
-    <button type="submit" class="btn btn-primary">{{ form.submit.label }}</button>
 </form>
 {% endblock content %}
