--- a/astal/templates/home.html
+++ b/astal/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1 class="astal-heading">Rezervacija</h1>
+<h1 class="astal-heading">REZERVACIJA</h1>
 <form action="" method="POST">
     <div class="form-group mb-4">
         <div class="container astal-form">
