--- a/astal/templates/login.html
+++ b/astal/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1 class="astal-heading">Prijavljivanje</h1>
+<h1 class="astal-heading">PRIJAVLJIVANJE</h1>
 <form method="POST" action="{{ url_for('admin.admin_login') }}">
     {{ form.hidden_tag() }}
     <div class="container astal-form">
