--- a/astal/static/css/astal.css
+++ b/astal/static/css/astal.css
@@ -1,10 +1,13 @@
 ﻿body { font-family: 'Montserrat', sans-serif; background-color: #ebebeb; }
 body::before { content: " GUŠTAJTE..."; position: absolute; top: 35%; left: 5%; font-size: 16vw; color: rgba(255, 255, 255, 0.3); z-index: -1; white-space: nowrap; }
 #ball { position: absolute; width: 12px; height: 12px; background-color: #c8d400; border-radius: 50%; pointer-events: none; transition: width 0.3s, height 0.3s; }
+body.reservations #ball, body.settings #ball, body.calendar #ball { display: none; }
 .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl { max-width: 1500px; }
 header.container.logedin { display: flex; justify-content: space-between; min-height: 120px; }
 header.container.logedin .logo { display: flex; }
 .logo { max-width: 180px; }
+.navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover { color: #0bbbef }
+h1 { text-align: center; }
 .cormorant { font-family: 'Cormorant Garamond', serif; }
 label.cormorant { font-size: 24px; font-style: italic; color: #999; }
 .container.astal-form { padding: 0 10px; }
@@ -21,15 +24,22 @@ h1.astal-heading { text-align: center; font-size: clamp(2rem, 5vw, 8rem); margin
 .alert { border-radius: 0; font-family: 'Cormorant Garamond', serif; font-size: 32px; font-style: italic; width: fit-content; }
 .alert-success { color: #ffffff; background-color: #c8d400; border-color: #c8d400; }
 .alert-danger { color: #ffffff; background-color: #ff6876; border-color: #ff6876; }
+input#reservation_date { width: auto; }
 
 @media (max-width: 768px) {
     #ball { display: none; }
 }
+@media (min-width: 769px) {
+    .ml-4 { margin-left: 1.5rem !important; }
+    .vertical-even { display: flex; flex-direction: column; justify-content: space-between; }
+}
 @keyframes ripple-1 {
     0% { transform: scale(1); opacity: 1; }
-    100% { transform: scale(1.5); opacity: 0; }
+    50% { transform: scale(1.5); opacity: 0.5; }
+    100% { transform: scale(1); opacity: 1; }
 }
 @keyframes ripple-2 {
     0% { transform: scale(1); opacity: 1; }
-    100% { transform: scale(1.5); opacity: 0; }
+    50% { transform: scale(1.5); opacity: 0; }
+    100% { transform: scale(1); opacity: 1; }
 }
