--- a/astal/templates/layout.html
+++ b/astal/templates/layout.html
@@ -94,6 +94,13 @@
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
         <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                var path = window.location.pathname;
+                var page = path.split("/").pop().split(".")[0];
+                document.body.classList.add(page);
+            });
+        </script>
 
         {% block scripts %}{% endblock %}
     </body>
