--- a/astal/templates/settings.html
+++ b/astal/templates/settings.html
@@ -2,19 +2,27 @@
 {% block content %}
 <h1>Podešavanja</h1>
 <form action="" method="POST">
-    <div class="form-group mb-4">
-        <label for="reservation_coast_per_person">Cena po osobi</label>
-        <input class="form-control" name="reservation_coast_per_person" id="reservation_coast_per_person" type="number" step="0.01" value="{{ settings.reservation_coast_per_person }}">
+    <div class="row mt-5">
+        <div class="col-md-3"></div>
+        <div class="col-md-2 mb-4 vertical-even">
+            <label for="reservation_coast_per_person">Cena po osobi</label>
+            <input class="form-control" name="reservation_coast_per_person" id="reservation_coast_per_person" type="number" step="0.01" value="{{ settings.reservation_coast_per_person }}">
+        </div>
+        <div class="col-md-2 mb-4 vertical-even">
+            <label for="default_number_of_tables_2">Podrazumevani Broj stolova (2 mesta)</label>
+            <input class="form-control" name="default_number_of_tables_2" id="default_number_of_tables_2" type="number" value="{{ settings.default_number_of_tables_2 }}">
+        </div>
+        <div class="col-md-2 mb-4 vertical-even">
+            <label for="default_number_of_tables_4">Podrazumevani Broj stolova (4 mesta)</label>
+            <input class="form-control" name="default_number_of_tables_4" id="default_number_of_tables_4" type="number" value="{{ settings.default_number_of_tables_4 }}">
+        </div>
+        <div class="col-md-3"></div>
     </div>
-    <div class="form-group mb-4">
-        <label for="default_number_of_tables_2">Podrazumevani Broj stolova (2 mesta)</label>
-        <input class="form-control" name="default_number_of_tables_2" id="default_number_of_tables_2" type="number" value="{{ settings.default_number_of_tables_2 }}">
+    <div class="row mt-5">
+        <div class="col-md-12 text-center">
+            <input type="hidden" id="submit_type" name="submit_type" value="">
+            <button class="btn btn-primary" type="submit" id="settings_button" name="settings_button" onclick="document.getElementById('submit_type').value='button'">Sacuvaj</button>
+        </div>
     </div>
-    <div class="form-group mb-4">
-        <label for="default_number_of_tables_4">Podrazumevani Broj stolova (4 mesta)</label>
-        <input class="form-control" name="default_number_of_tables_4" id="default_number_of_tables_4" type="number" value="{{ settings.default_number_of_tables_4 }}">
-    </div>
-    <input type="hidden" id="submit_type" name="submit_type" value="">
-    <button class="btn btn-primary" type="submit" id="settings_button" name="settings_button" onclick="document.getElementById('submit_type').value='button'">Sacuvaj</button>
 </form>
 {% endblock content %}
