--- a/astal/templates/calendar.html
+++ b/astal/templates/calendar.html
@@ -4,9 +4,9 @@
 <form action="" method="POST">
     <div class="row">
         <div class="form-group col text-center mb-5">
-            <label for="reservation_date">Izaberite datum rezervacije</label>
-            <input class="form-control d-inline-block" name="reservation_date" id="reservation_date" type="date" min="{{ min_date }}" max="{{ max_date }}" value="{{ selected_date }}">
-            <a class="btn btn-primary ml-4" href="" id="reservation_link">Rezervacije</a>
+            <label class="mt-2 mb-2" for="reservation_date">Izaberite datum rezervacije</label>
+            <input class="form-control d-inline-block mt-2 mb-2" name="reservation_date" id="reservation_date" type="date" min="{{ min_date }}" max="{{ max_date }}" value="{{ selected_date }}">
+            <a class="btn btn-primary ml-4 mt-2 mb-2" href="" id="reservation_link">Rezervacije</a>
         </div>
     </div>
 </form>
