--- a/astal/static/css/astal.css
+++ b/astal/static/css/astal.css
@@ -25,8 +25,6 @@ h1.astal-heading { text-align: center; font-size: clamp(2rem, 5vw, 8rem); margin
 .alert { border-radius: 0; font-family: 'Cormorant Garamond', serif; font-size: 32px; font-style: italic; width: fit-content; }
 .alert-success { color: #ffffff; background-color: #c8d400; border-color: #c8d400; }
 .alert-danger { color: #ffffff; background-color: #ff6876; border-color: #ff6876; }
-input#reservation_date { width: auto; }
-
 
 .menu-toggle .toggle-lines { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; 
     -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; 
@@ -36,17 +34,8 @@ input#reservation_date { width: auto; }
 .menu-toggle:hover .toggle-text::after, .menu-toggle:hover .toggle-line { -webkit-animation-name: toggleLine;  animation-name: toggleLine; -webkit-animation-duration: .5s; 
     animation-duration: .5s; -webkit-animation-play-state: running; animation-play-state: running; -webkit-animation-timing-function: ease; animation-timing-function: ease; }
 .toggle-line:last-child { -webkit-animation-delay: .1s; animation-delay: .1s; }
-.menu-toggle .toggle-lines:not(.collapsed) .toggle-line:first-child {
-    -webkit-transform: rotate(-135deg);
-    -ms-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-}
-.menu-toggle .toggle-lines:not(.collapsed) .toggle-line:last-child {
-    -webkit-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    margin-top: -5px;
-}
+.menu-toggle .toggle-lines:not(.collapsed) .toggle-line:first-child { -webkit-transform: rotate(-135deg); -ms-transform: rotate(-135deg); transform: rotate(-135deg); }
+.menu-toggle .toggle-lines:not(.collapsed) .toggle-line:last-child { -webkit-transform: rotate(-45deg); -ms-transform: rotate(-45deg); transform: rotate(-45deg); margin-top: -5px; }
 
 
 @media (max-width: 768px) {
@@ -62,6 +51,7 @@ input#reservation_date { width: auto; }
 @media (min-width: 769px) {
     .ml-4 { margin-left: 1.5rem !important; }
     .vertical-even { display: flex; flex-direction: column; justify-content: space-between; }
+    /*input#reservation_date, input#number_of_people, select#reservation_time { width: auto; }*/
 }
 @media (min-width: 992px) {
     .menu-toggle { display: none; }
