--- a/astal/templates/reservations.html
+++ b/astal/templates/reservations.html
@@ -117,7 +117,7 @@
     </div>
 </div>
 {% else %}
-<p class="text-center w-100 alert">Nema rezervacija za izabrani datum</p>
+<p class="text-center w-100 alert orange-alert">Nema rezervacija za izabrani datum</p>
 {% endif %}
 {% endblock content %}
 
