--- a/astal/static/css/astal.css
+++ b/astal/static/css/astal.css
@@ -10,21 +10,25 @@ header.container.logedin .logo { display: flex; }
 .navbar-light .navbar-brand:focus, .navbar-light .navbar-brand:hover { color: #0bbbef }
 h1 { text-align: center; }
 .cormorant { font-family: 'Cormorant Garamond', serif; }
-label.cormorant { font-size: 24px; font-style: italic; color: #999; }
+label.cormorant { font-size: 24px; /*font-style: italic;*/ color: #0bbbef; }
 .container.astal-form { padding: 0 10px; }
 .astal-form input, .astal-form select, .astal-form textarea { background-color: transparent !important; border: 0 !important; border-bottom: 1px solid #999 !important; border-radius: 0 !important; }
 .astal-form input, .astal-form select, .astal-form textarea { margin-bottom: 30px; }
 h1.astal-heading { text-align: center; font-size: clamp(2rem, 5vw, 8rem); margin: 0 0 50px 0; }
+.form-control { width: auto; }
 .form-control:focus { box-shadow: none; border-bottom-color: #c8d400 !important; }
 .astal-form .btn { background-color: #0bbbef !important; border-color: #0bbbef !important; }
 .animated-btn { width: 120px; height: 120px; border-radius: 50%; line-height: 120px; display: inline-block; text-align: center; font-size: 20px; background-color: transparent; position: relative; background-repeat: no-repeat; background-position: 50% 50%; border: 0; }
 .animated-btn::before, .animated-btn::after { content: ''; display: block; position: absolute; top: 0; right: 0; bottom: 0; left: 0; border-radius: 50%; background: rgba(200, 212, 0, 0.8); animation: ripple-1 2s infinite ease-in-out; z-index: -1;}
 .animated-btn::after { background: rgba(200, 212, 0, 0.8); animation: ripple-2 2s infinite ease-in-out; animation-delay: 0.5s; }
+.btn-primary { background-color: #0bbbef; border-color: #0bbbef; }
+.btn-primary:hover { background-color: #0799c5; border-color: #0799c5; }
 
 .pre-alert { margin-top: 50px; }
-.alert { border-radius: 0; font-family: 'Cormorant Garamond', serif; font-size: 32px; font-style: italic; width: fit-content; }
+.alert { border-radius: 0; font-family: 'Cormorant Garamond', serif; font-size: 32px; /*font-style: italic;*/ width: fit-content; }
 .alert-success { color: #ffffff; background-color: #c8d400; border-color: #c8d400; }
-.alert-danger { color: #ffffff; background-color: #ff6876; border-color: #ff6876; }
+.alert-danger { color: #ffffff; background-color: #f58220; border-color: #f58220; }
+.orange-alert { color: #f58220; }
 
 .menu-toggle .toggle-lines { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; 
     -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; 
