--- a/astal/templates/layout.html
+++ b/astal/templates/layout.html
@@ -48,13 +48,13 @@
                                 <a class="navbar-brand" href="{{ url_for('main.settings') }}">Podešavanja</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navbar-brand" href="{{ url_for('admin.reservations') }}">Rezervacije</a>
+                                <a class="navbar-brand" href="{{ url_for('admin.reservations') }}">Lista rezervacija</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navbar-brand" href="{{ url_for('admin.calendar') }}">Kalendar</a>
+                                <a class="navbar-brand" href="{{ url_for('admin.calendar') }}">Dnevnik</a>
                             </li>
                             <li class="nav-item">
-                                <a class="navbar-brand" href="{{ url_for('main.home') }}">Astal</a>
+                                <a class="navbar-brand" href="{{ url_for('main.home') }}">Nova rezervacija</a>
                             </li>
                             <li class="nav-item">
                                 <a class="navbar-brand" href="{{ url_for('admin.logout') }}">Odjavite se</a>
