--- a/astal/templates/settings.html
+++ b/astal/templates/settings.html
@@ -9,11 +9,11 @@
             <input class="form-control" name="reservation_coast_per_person" id="reservation_coast_per_person" type="number" step="0.01" value="{{ settings.reservation_coast_per_person }}">
         </div>
         <div class="col-md-2 mb-4 vertical-even">
-            <label for="default_number_of_tables_2">Podrazumevani Broj stolova (2 mesta)</label>
+            <label for="default_number_of_tables_2">Podrazumevani broj stolova (2 mesta)</label>
             <input class="form-control" name="default_number_of_tables_2" id="default_number_of_tables_2" type="number" value="{{ settings.default_number_of_tables_2 }}">
         </div>
         <div class="col-md-2 mb-4 vertical-even">
-            <label for="default_number_of_tables_4">Podrazumevani Broj stolova (4 mesta)</label>
+            <label for="default_number_of_tables_4">Podrazumevani broj stolova (4 mesta)</label>
             <input class="form-control" name="default_number_of_tables_4" id="default_number_of_tables_4" type="number" value="{{ settings.default_number_of_tables_4 }}">
         </div>
         <div class="col-md-3"></div>
@@ -21,7 +21,7 @@
     <div class="row mt-5">
         <div class="col-md-12 text-center">
             <input type="hidden" id="submit_type" name="submit_type" value="">
-            <button class="btn btn-primary" type="submit" id="settings_button" name="settings_button" onclick="document.getElementById('submit_type').value='button'">Sacuvaj</button>
+            <button class="btn btn-primary" type="submit" id="settings_button" name="settings_button" onclick="document.getElementById('submit_type').value='button'">Sačuvaj</button>
         </div>
     </div>
 </form>
