--- a/astal/templates/home.html
+++ b/astal/templates/home.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-3">
-                    <label for="reservation_date" class="cormorant">Izaberite datum rezervacije</label>
+                    <label for="reservation_date" class="cormorant">Izaberite datum</label>
                     <input class="form-control" name="reservation_date" id="reservation_date" type="date" min="{{ min_date }}" max="{{ max_date }}" value="{{ reservation_date }}">
                 </div>
                 <div class="col-md-2">
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-md-12 text-center mt-4">
                     <input type="hidden" id="submit_type" name="submit_type" value="">
-                    <button class="animated-btn text-white" type="submit" id="reservation_button" name="reservation_button" onclick="document.getElementById('submit_type').value='button'">Rezerviši</button>
+                    <button class="animated-btn text-white" type="submit" id="reservation_button" name="reservation_button" onclick="document.getElementById('submit_type').value='button'">Rezervišite</button>
                     {% else %}
                     Nije moguće rezervisati, za više informacija konaktirajte nas na broj...
                     <input type="hidden" id="submit_type" name="submit_type" value="">
