--- a/astal/templates/home.html
+++ b/astal/templates/home.html
@@ -2,6 +2,7 @@
 {% block content %}
 <h1 class="astal-heading">REZERVACIJA</h1>
 <form action="" method="POST">
+    {{ form.hidden_tag() }}
     <div class="form-group mb-4">
         <div class="container astal-form">
             <div class="row">
